[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/book_scripts.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 29 )

[node name="Book" type="Area2D"]
position = Vector2( 338, 195 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_Book_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Book_mouse_exited"]
